@@ -20,8 +20,8 @@
 email: bartj@hum.ku.dk
 */
 
-#define DATUM "4 November 2024"
-#define VERSION "6.26.0"
+#define DATUM "10 November 2024"
+#define VERSION "6.26.1"
 #define BUILD "310"
 /*
 COMPILATION
